--- a/styles/sumStyle.css
+++ b/styles/sumStyle.css
@@ -4,39 +4,80 @@
 
 body {
   margin: 0;
-  background-color: rgba(0, 0, 0, .85);
+  background-color: rgba(0, 0, 0, 0.20);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
+  display: flex;
   width: 100%;
   height: 70px;
   max-width: 70px;
   margin: 20px auto;
-  align-items: center;
 }
 
 header img {
   width: 100%;
   max-width: 100px;
+  margin: auto;
 }
 
-p {
-  font-size: 15px;
-  color: aliceblue;
+.content-center h2 {
+  margin: auto;
 }
 
 .content-center {
-  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
   border: 1px solid rgb(116, 71, 189);
   border-radius: 5px;
   width: 100%;
-  max-width: 400px;
+  max-width:900px;
+  min-width: 350px;
   margin: 50px auto;
   padding: 10px;
+  text-align: center;
 }
 
-.content-center table {
+#sum {
+  width: 100%;
+  margin: 10px auto;
+  max-width: 400px;
+  border: 2px solid rgb(116, 71, 189);
+  border-radius: 4px;
+  padding: 3px;
+  background-color: #f2f2f2;
+  flex-wrap: wrap;
+}
+
+#valueSum {
+  width: 100%;
+  font-size: 35px;
+  border-radius: 3px;
+  background-color: #f2f2f2;
+  border: 1px solid rgb(116, 71, 189);
+  padding-left: 15px;
+}
+
+#sum table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+#sum table td {
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-top: 1px solid rgba(0, 0, 0, 0.35);
+  text-align: center;
+}
+
+#sum tr:hover {
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+
+/*
+#table {
   text-align: center;
   margin: auto;
   width: 100%;
