--- a/styles/multiplicationStyle.css
+++ b/styles/multiplicationStyle.css
@@ -2,26 +2,31 @@
   display: flex;
   width: 100%;
   max-width: 400px;
-  margin: 10px auto;
-  border: 2px solid rgb(116, 71, 189);
-  border-radius: 4px;
+  margin: 0px auto 15px;
+  border-radius: 10px;
   text-align: center;
-  padding: 3px;
+  padding: 10px;
   background-color: #f2f2f2;
   flex-wrap: wrap;
+  border: .3em solid rgba(0, 0, 0, 0.15);
 }
 
-#multiplication h2 {
-  margin: auto;
+#multiplication:hover {
+  border: 2px solid rgb(144, 75, 184);
 }
+
 
 #valueMultiplication{
   width: 100%;
   font-size: 35px;
-  border-radius: 3px;
+  border-radius: 5px;
   background-color: #f2f2f2;
-  border: 1px solid rgb(116, 71, 189);
-  padding-left: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.40);
+}
+
+#valueMultiplication:hover {
+  font-size: 2.4em;
+  border-color: rgb(144, 75, 184);
 }
 
 #multiplication table {
@@ -37,5 +42,5 @@
 }
 
 #multiplication tr:hover {
-  background-color: rgba(0, 0, 0, 0.15);
+  background-color: rgba(0, 0, 0, 0.10);
 }
