--- a/styles/subtractionStyle.css
+++ b/styles/subtractionStyle.css
@@ -2,14 +2,19 @@
   display: flex;
   width: 100%;
   max-width: 400px;
-  margin: 10px auto;
-  border: 2px solid rgb(116, 71, 189);
-  border-radius: 4px;
+  margin: 0px auto 15px;
+  border-radius: 10px;
   text-align: center;
-  padding: 3px;
+  padding: 10px;
   background-color: #f2f2f2;
   flex-wrap: wrap;
+  border: .3em solid rgba(0, 0, 0, 0.15);
 }
+
+#subtraction:hover {
+  border: 2px solid rgb(144, 75, 184);
+}
+
 
 #subtraction h2 {
   margin: auto;
@@ -18,10 +23,14 @@
 #valueSubtraction{
   width: 100%;
   font-size: 35px;
-  border-radius: 3px;
+  border-radius: 5px;
   background-color: #f2f2f2;
-  border: 1px solid rgb(116, 71, 189);
-  padding-left: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.40);
+}
+
+#valueSubtraction:hover {
+  font-size: 2.4em;
+  border-color: rgb(144, 75, 184);
 }
 
 #subtraction table {
@@ -37,5 +46,5 @@
 }
 
 #subtraction tr:hover {
-  background-color: rgba(0, 0, 0, 0.15);
+  background-color: rgba(0, 0, 0, 0.10);
 }
